# scantailor

./: ApplicationSettings.cpp  ApplicationSettings.h  BUILD.md  CMakeLists.txt  CommandLine.cpp  CommandLine.h  ConsoleBatch.cpp  ConsoleBatch.h  DebugImageView.cpp  Despeckle.cpp  DeviationProvider.h  FilterTaskExecutor.cpp  FilterTaskExecutor.h  FilterUiInterface.h  ImageId.h  ImageViewBase.cpp  LoadFilesStatusDialog.cpp  MainWindow.cpp  MainWindow.h  NewOpenProjectPanel.cpp  NewOpenProjectPanel.h  OpenGLSupport.cpp  OrderByDeviationProvider.cpp  OrderByDeviationProvider.h  OutputFileNameGenerator.cpp  OutputFileNameGenerator.h  PageId.h  PdfToImages.cpp  PdfToImages.h  PipelineStripWidget.cpp  PipelineStripWidget.h  PixmapRenderer.cpp  ProjectCreationContext.cpp  ProjectCreationContext.h  ProjectFilesDialog.cpp  ProjectFilesDialog.h  ProjectPages.cpp  ProjectReader.cpp  ProjectWriter.cpp  RecentProjects.cpp  (+29 more)
crash_reporter/: CMakeLists.txt  CrashReportDialog.cpp
debian/: changelog  control  copyright  rules
dewarping/: Curve.cpp  CylindricalSurfaceDewarper.cpp  DistortionModel.cpp  DistortionModelBuilder.cpp
docs/: COMPARATIVA_SCANTAILOR_ADVANCED.md  UI_REDESIGN_2026.md  UI_REDESIGN_2026_QT_SNIPPETS.cpp  UI_REDESIGN_2026_STYLES.qss
foundation/: AutoRemovingFile.h  CMakeLists.txt  PropertySet.cpp
imageproc/: Binarize.cpp  Binarize.h  ConnectivityMap.cpp  HoughLineDetector.cpp  MaxWhitespaceFinder.cpp  Morphology.cpp  PolygonRasterizer.cpp  PolygonUtils.cpp
interaction/: CMakeLists.txt  InteractiveXSpline.cpp
math/adiff/tests/: CMakeLists.txt  TestHessians.cpp
(+117 files in other folders)
